<resources>
    <string name="app_name">User Profile</string>
    <string name="name">%1$s %2$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="description">Description</string>
    <string name="open_picture_gallery">Open Picture Gallery</string>
    <string name="confirm">Confirm</string>
    <string name="title_profile">"This is your profile!"</string>
</resources>
